terraform/config/eks-best-practices/check-nodegroup-remote-access/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-01.json --policy ../check-nodegroup-remote-access.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-02.json --policy ../check-nodegroup-remote-access.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-03
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-03.json --policy ../check-nodegroup-remote-access.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-04
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-04.json --policy ../check-nodegroup-remote-access.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-nodegroup-remote-access.yaml --payload ./bad-payload-01.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations:
                  - (contains(message, 'AWS EKS node group should not have implicit SSH access from 0.0.0.0/0')): true
                    errors:
                    - type: FieldValueInvalid
                      value: true
                      detail: 'Expected value: false'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-nodegroup-remote-access.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-nodegroup-remote-access
                rules:
                - rule:
                    name: check-nodegroup-remote-access
                  error: ~
                  violations:
                  - (contains(message, 'AWS EKS node group should not have implicit SSH access from 0.0.0.0/0')): true
                    errors:
                    - type: FieldValueInvalid
                      value: true
                      detail: 'Expected value: false'
